--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
